--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -1,7 +1,3 @@
-Simplications:
-  Disallow function overloading altogether
-  Disallow implict conversions (function calls must have exactly the right arguments)
-
 Implement compilation steps as Symbol transformations
   Phase: Resolve symbols (augment Identifier with label number)
   Phase: Check types and resolve overloaded function calls
@@ -9,8 +5,6 @@ Implement compilation steps as Symbol transformations
   Phase: Run
 
 Find type of each expression
-  Need to know which function overloads are called
-    Need to know about all the overloads, the types of the arguments, the available conversion functions and their costs
 
 Phase: Resolve variable references to variable definitions and parameters
   Only need to look for first 
@@ -31,6 +25,9 @@ Come up with a low-level intermediate form
   32-bits per entry stack, say 1Mb default size
   heap memory shared with interpreter
   Low-level instructions
+
+Allow implicit type conversions
+  Need to know about all the overloads, the types of the arguments, the available conversion functions and their costs
 
 Algorithm for resolving names in the presence of overloading
   Make a list of all the targets with matching names and potential number of arguments
