--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -1,4 +1,5 @@
-How to 
+Put compiledProgram, basicBlock and label into a class with some helper methods:
+  
 
 Implement compile()
   When compiling break/continue statement, make sure we are inside a suitable loop/switch
