--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -2,6 +2,9 @@ Make a function to compile a function
   Make it compile the program as well
   Compute offsets of local variables
     Need to know sizes of types
+    Interaction with local variable elimination?
+
+
 
 Implement compile()
   When compiling break/continue statement, make sure we are inside a suitable loop/switch
